Fix for "bleed-through" effect on staffplan page

--- a/app/assets/stylesheets/staffplans.css.sass
+++ b/app/assets/stylesheets/staffplans.css.sass
@@ -132,6 +132,7 @@ body#staffplans.show
   section.main
     width: 100%
     min-width: 100%
+    overflow-x: hidden
     
     .content
       padding: 10px 20px
